<resources>
    <string name="app_name">MyCollege</string>
    <string name="note_session_01">Session 01</string>
    <string name="note_session_02">Session 02</string>
    <string name="note_session_03">Session 03</string>
    <string name="note_session_04">Session 04</string>
    <string name="note_btn_reset">reset</string>
    <string name="note_btn_average">Average</string>
    <string name="note_present">Present</string>
    <string name="note_avg">Average</string>
    <string name="note_hint">Score</string>
    <string name="note_session_05">Session 05</string>
    <string name="note_session_06">Session 06</string>
    <string name="note_session_07">Session 07</string>
    <string name="note_session_08">Session 08</string>
    <string name="login_title">My College App</string>
    <string name="login_message_log">Please enter user and password</string>
    <string name="login_txt_user">User</string>
    <string name="login_txt_passwd">Password</string>
    <string name="login_btn_signin">Sign In</string>
    <string name="login_btn_signup">Sign Up</string>
    <string name="login_label_rememberme">Remember me</string>
    <string name="create_btn_change_image">Change</string>
    <string name="create_name">Name</string>
    <string name="create_last_name">Last Name</string>
    <string name="create_mail">E-mail</string>
    <string name="create_cellphone">Cellphone</string>
    <string name="create_address">Address</string>
    <string name="courseList_title">Course List</string>
    <string name="courseList_manageAccount">Manager Account</string>
    <string name="create_latitude">Latitude</string>
    <string name="create_longitude">Longitude</string>
    <string name="list_student_add">Add New Student</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add</string>
    <string name="menu_update">Edit</string>
    <string name="create_title">Create New Student</string>
    <string name="confirm_title">Confirm</string>
</resources>
