<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mycollege.NoteActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_01"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score01"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_02"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score02"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_03"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score03"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_04"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score04"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_05"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score05"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score05"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_06"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score06"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score06"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_07"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score07"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score07"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_session_08"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <CheckBox
                        android:id="@+id/cbx_score08"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note_present"/>
                    <EditText
                        android:id="@+id/txt_score08"
                        android:paddingLeft="@dimen/activity_note_vertical_scoreText"
                        android:paddingRight="@dimen/activity_note_vertical_scoreText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/note_hint"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_btn_reset"
                    style="?android:attr/button"/>
                <Button
                    android:id="@+id/btn_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_btn_average"
                    style="?android:attr/button"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/note_avg"/>
                <EditText
                    android:id="@+id/txt_average"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
